# aceternity-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-push-hooks.sh  .ruff.toml  .shannon-test  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING.md  QUALITY_CHECKS.md  README.md  SECURITY.md  SETUP_COMPLETE.md  mypy.ini  pyproject.toml  smithery.yaml
.github/: PYPI_SETUP.md
.github/workflows/: docker-publish.yml  npm-publish.yml  publish.yml  pypi-publish.yml  quality-gates.yml  snap-publish.yml
packaging/aur/: PKGBUILD
packaging/chocolatey/: aceternity-mcp.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/conda-forge/: meta.yaml
packaging/homebrew/: aceternity-mcp.rb
packaging/nix/: default.nix
packaging/npm/: README.md  package.json
packaging/scoop/: aceternity-mcp.json
packaging/winget/: DevinOldenburg.AceternityMCP.yaml
registry/: index.json
registry/components/: 3d-card.json  3d-globe.json  3d-marquee.json  3d-pin.json  animated-modal.json  animated-testimonials.json  animated-tooltip.json  apple-cards-carousel.json  ascii-art.json  aurora-background.json  background-beams-with-collision.json  background-beams.json  background-boxes.json  background-gradient-animation.json  background-gradient.json  background-lines.json  background-ripple-effect.json  bento-grid.json  canvas-reveal-effect.json  canvas-text.json  card-hover-effect.json  card-spotlight.json  card-stack.json  carousel.json  code-block.json  colourful-text.json  comet-card.json  compare.json  container-scroll-animation.json  container-text-flip.json  cover.json  direction-aware-hover.json  dither-shader.json  dotted-glow-background.json  draggable-card.json  encrypted-text.json  evervault-card.json  file-upload.json  flip-words.json  floating-dock.json  (+64 more)
registry/raw/: components.json
scripts/: run-all-checks.sh  run_tests.py  setup-qa.sh  setup_pypi.sh  sync_registry.py  validate_registry.py
snap/: snapcraft.yaml
src/aceternity_mcp/: __init__.py  __main__.py  cli.py  install.py  models.py  recommender.py  registry.py  search.py  server.py  uninstall.py
tests/: __init__.py  conftest.py  test_cli.py  test_installer.py  test_recommender.py  test_registry.py  test_search.py  test_server.py
