[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aceternity-mcp"
version = "1.0.1"
description = "An MCP server that exposes a structured registry of Aceternity UI components with rich descriptions, search, recommendations, and installation workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aceternity MCP Contributors" }]
keywords = [
    "mcp",
    "aceternity",
    "ui",
    "components",
    "registry",
    "shadcn",
    "react",
    "nextjs",
    "tailwind",
    "framer-motion",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["mcp>=1.0.0"]

[project.scripts]
aceternity-mcp = "aceternity_mcp.server:main"
aceternity-mcp-install = "aceternity_mcp.install:main"

[project.urls]
Homepage = "https://github.com/devinoldenburg/aceternity-mcp"
Repository = "https://github.com/devinoldenburg/aceternity-mcp"
Issues = "https://github.com/devinoldenburg/aceternity-mcp/issues"
Documentation = "https://github.com/devinoldenburg/aceternity-mcp#readme"

[project.entry-points."mcp.server"]
aceternity-mcp = "aceternity_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aceternity_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"registry" = "share/aceternity-mcp/registry"
