[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aceternity-mcp"
version = "1.9.3"
description = "A pipx application for Aceternity UI components - MCP server with CLI for discovery, recommendations, and installation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aceternity MCP Contributors" }]
keywords = [
    "mcp",
    "aceternity",
    "ui",
    "components",
    "registry",
    "shadcn",
    "react",
    "nextjs",
    "tailwind",
    "framer-motion",
    "pipx",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["mcp>=1.0.0"]

[project.scripts]
aceternity-mcp = "aceternity_mcp.cli:main"
aceternity-mcp-server = "aceternity_mcp.server:main"
aceternity-mcp-install = "aceternity_mcp.install:main"
aceternity-mcp-uninstall = "aceternity_mcp.uninstall:main"

[project.urls]
Homepage = "https://github.com/devinoldenburg/aceternity-mcp"
Repository = "https://github.com/devinoldenburg/aceternity-mcp"
Issues = "https://github.com/devinoldenburg/aceternity-mcp/issues"
Documentation = "https://github.com/devinoldenburg/aceternity-mcp#readme"

[project.entry-points."mcp.server"]
aceternity-mcp = "aceternity_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aceternity_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"registry" = "share/aceternity-mcp/registry"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/aceternity_mcp"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 40

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B404", "B603", "B607", "B110", "B310"]  # Skip false positives

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]
